--- a/popup.css
+++ b/popup.css
@@ -1,19 +1,113 @@
-@import url('https://fonts.cdnfonts.com/css/nexa-bold');
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Condensed:wght@400;500;600;700&display=swap');
 
-*
-{
-    font-family: "Nexa", sans-serif;
+* {
+    font-family: 'Cabin Condensed', sans-serif;
 }
 
-body 
-{
-    height: 450px;
-    width: 450px;
-    text-align: center;
+body {
+    background-color: #ECF0F1;
+    margin: 0;
+    padding: 0;
+    border: 6px solid #2C3F50;
 }
 
-.title
-{
-    font-size: 10rem;
+.screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-width: 450px;
+    min-height: 455px;
+}
+
+.interface {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #F2F5F8;
+    width: 100%;
+    height: 90%;
+    box-sizing: border-box;
+}
+
+.title {
+    font-size: 1.8rem;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #ECF0F1;
+}
+
+.title_space {
+    background: linear-gradient(to right, #2C3F50, #192E40);
+    padding: 2px;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+
+#uploaded_image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 250px;
+    margin-bottom: 0.5rem;
+    background-color: #FFFFFF;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+}
+
+#uploaded_image img {
+    object-fit: contain;
+    max-width: 80%;
+    max-height: 100%;
+}
+
+#predictions {
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    color: #2C3F50;
+}
+
+.custom-file-input {
+    display: none;
+}
+
+.custom-file-label {
+    display: inline-block;
+    padding: 8px 16px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #000000;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-top: -2rem;
+    margin-bottom: 0.5rem;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    transition: background-color 0.3s ease;
+}
+
+.custom-file-label:hover {
+    background-color: #192E40;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+}
+
+.custom-file-input:focus {
+    outline: none;
+}
+
+.custom-file-input::file-selector-button {
+    display: none;
 }
